--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "mdbreact": "^5.2.0",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.9",
